--- a/grlasso_grpreg/grlasso_three_groups.Rmd
+++ b/grlasso_grpreg/grlasso_three_groups.Rmd
@@ -35,7 +35,7 @@ sessionInfo()
 First, load the dataset; clean up names as needed; and convert factors to, well, factors. Next we remove missing values and reorder predictors (environmental variables first, confounders second). In keeping with standard practice, we'll ln-transform the environmental exposures and the outcome. This is the dataset we'll use to illustrate variable selection methods.
 
 ```{r}
-study_pop = read_csv("Data/studypop.csv") %>% 
+study_pop = read_csv("../Data/studypop.csv") %>% 
   clean_names(case = c("old_janitor")) %>% 
   mutate(bmi_cat3 = as.factor(bmi_cat3),
          edu_cat = as.factor(edu_cat),
