--- a/grlasso_grpreg/grlasso_three_groups.Rmd
+++ b/grlasso_grpreg/grlasso_three_groups.Rmd
@@ -35,7 +35,7 @@ sessionInfo()
 First, load the dataset; clean up names as needed; and convert factors to, well, factors. Next we remove missing values and reorder predictors (environmental variables first, confounders second). In keeping with standard practice, we'll ln-transform the environmental exposures and the outcome. This is the dataset we'll use to illustrate variable selection methods.
 
 ```{r}
-study_pop = read_csv("../Data/studypop.csv") %>% 
+study_pop = read_csv("./Data/studypop.csv") %>% 
   clean_names(case = c("old_janitor")) %>% 
   mutate(bmi_cat3 = as.factor(bmi_cat3),
          edu_cat = as.factor(edu_cat),
@@ -204,12 +204,14 @@ labs(y = "Beta Coefficients",
 summary_data_grlasso %>%
   group_by(chem) %>%
   ggplot(aes(x = chem)) +
- geom_jitter(aes(y = beta_grlasso, color = Group), shape=16, size = 1, alpha = 0.45,  position=position_jitter(height = 0.0005, width = .2))+
-  geom_point(aes(y = mean, fill = Group), shape = 23, size = 3, alpha = 1) +
+ geom_jitter(aes(y = beta_grlasso, color = Group), shape=16, size = 1, alpha = 1,  position=position_jitter(height = 0.0005, width = .2))+
+  stat_summary(aes(y = beta_grlasso), fun.data = mean_sdl, fun.args = list(mult = 1), geom = "errorbar", width=0.25) +
+   stat_summary(aes(y = beta_grlasso, fill = Group), fun.y = mean, geom ="point", shape=23, size=3, alpha = 1) +
+  #geom_point(aes(y = mean, fill = Group), shape = 23, size = 3, alpha = 1) +
  #geom_errorbar(aes(ymin = mean-se, ymax=mean+se), width=.1, position=position_dodge(0.05)) +
-  #stat_summary(aes(y = beta_grlasso, fill = Group), fun.y = mean, geom ="point", shape=23, size=3, alpha = 0.4) +
+ 
   #geom_boxplot(aes(y = beta_grlasso, color = Group), outlier.shape = NA, alpha = 0) +
-  geom_col(aes(y = number_nonzero/4000, fill = Group), width = 0.6, position ="identity", alpha = 0.003) +
+  geom_col(aes(y = number_nonzero/4000, fill = Group), width = 0.8, position ="identity", alpha = 0.002) +
   scale_y_continuous(sec.axis = sec_axis(~.*4000, name = "# of Non-zero Beta Coefficients")) +
   theme_classic() +
   labs(y = "Beta Coefficients",
@@ -219,12 +221,12 @@ summary_data_grlasso %>%
                       legend.position = "bottom",
                       legend.text = element_text(size = 12),
         axis.text.y = element_text(size = 9.5),
-        text = element_text(size = 12.5)) +
+        text = element_text(size = 12.5), 
+        aspect.ratio = 1/1,
+        axis.line.x = element_blank(),
+        axis.ticks.x = element_blank()) +
   geom_hline(yintercept = 0) 
  
- 
-   
-  
 ```
 
 
