--- a/lasso_glment/lasso.Rmd
+++ b/lasso_glment/lasso.Rmd
@@ -174,7 +174,15 @@ data_lasso <- repeat_cv_lasso %>%
                             ifelse(grepl("lbxp", variable), "Non-Ortho PCBs",
                               ifelse(grepl("lbxh", variable), "Non-Ortho PCBs", "mPFD")))))) %>%
   mutate(variable = as.factor(variable),
-          chem = fct_recode(variable, "PCB 74" = "lbx074la",
+          chem = fct_recode(variable, 
+                             "1,2,3,6,7,8-hxcdd" = "lbxd03la",
+                                "1,2,3,4,6,7,8-hpcdd" = "lbxd05la",
+                               "1,2,3,4,6,7,8,9-ocdd" =  "lbxd07la",
+                               "2,3,4,7,8-pncdf" =  "lbxf03la",
+                               "1,2,3,4,7,8-hxcdf" =  "lbxf04la",
+                               "1,2,3,6,7,8-hxcdf" =  "lbxf05la",
+                               "1,2,3,4,6,7,8-hxcdf" =  "lbxf08la",
+                                "PCB 74" = "lbx074la",
                                 "PCB 99" = "lbx099la",
                                 "PCB 118" = "lbx118la",
                                 "PCB 138" = "lbx138la",
@@ -183,15 +191,8 @@ data_lasso <- repeat_cv_lasso %>%
                                 "PCB 180" = "lbx180la",
                                 "PCB 187" = "lbx187la",
                                 "PCB 194" = "lbx194la",
-                                "1,2,3,6,7,8-hxcdd" = "lbxd03la",
-                                "1,2,3,4,6,7,8-hpcdd" = "lbxd05la",
-                               "1,2,3,4,6,7,8,9-ocdd" =  "lbxd07la",
-                               "2,3,4,7,8-pncdf" =  "lbxf03la",
-                               "1,2,3,4,7,8-hxcdf" =  "lbxf04la",
-                               "1,2,3,6,7,8-hxcdf" =  "lbxf05la",
-                               "1,2,3,4,6,7,8-hxcdf" =  "lbxf08la",
-                               "PCB 169" =  "lbxhxcla",
-                                "PCB 126" = "lbxpcbla")) %>%
+                                "PCB 126" = "lbxpcbla",
+                                "PCB 169" =  "lbxhxcla")) %>%
   dplyr::select(-variable) %>%
   group_by(chem) %>%
   mutate(mean = mean(beta_lasso),
@@ -210,6 +211,25 @@ summary_data_lasso <- full_join(data_lasso, counts, by = "chem") %>%
   mutate_if(is.numeric, ~replace(., is.na(.), 0))
 
 
+summary_data_lasso$chem <- factor(summary_data_lasso$chem,levels = c("1,2,3,6,7,8-hxcdd",
+                                "1,2,3,4,6,7,8-hpcdd",
+                               "1,2,3,4,6,7,8,9-ocdd",
+                               "2,3,4,7,8-pncdf",
+                               "1,2,3,4,7,8-hxcdf",
+                               "1,2,3,6,7,8-hxcdf",
+                               "1,2,3,4,6,7,8-hxcdf",
+                               "PCB 118",
+                               "PCB 74",
+                                "PCB 99",
+                                "PCB 138",
+                                "PCB 153",
+                                "PCB 170",
+                                "PCB 180",
+                                "PCB 187",
+                                "PCB 194",
+                                "PCB 126",
+                                "PCB 169"))
+
 
 ```
 
@@ -227,8 +247,7 @@ summary_data_lasso %>%
   scale_y_continuous(sec.axis = sec_axis(~.*4000, name = "# of Non-zero Beta Coefficients")) +
   theme_classic() +
   labs(y = "Beta Coefficients",
-       x = element_blank(),
-       title  = "Lasso Beta Coefficients Over 100 seeds") +
+       x = element_blank()) +
   theme(axis.text.x = element_text(angle = 60, hjust = 1, size = 9.5),
                       legend.position = "bottom",
                       legend.text = element_text(size = 12),
