--- a/lasso_glment/lasso.Rmd
+++ b/lasso_glment/lasso.Rmd
@@ -238,11 +238,11 @@ summary_data_lasso$chem <- factor(summary_data_lasso$chem,levels = c("1,2,3,6,7,
 summary_data_lasso %>%
   group_by(chem) %>%
   ggplot(aes(x = chem)) +
-  geom_jitter(aes(y = beta_lasso, color = Group), shape=16, size = 1, alpha = 1,  position=position_jitter(height = 0.0005, width = .2)) +
+  geom_jitter(aes(y = beta_lasso, color = Group), shape=16, size = 1, alpha = 1,  position=position_jitter(height = 0.0008, width = .2)) +
   #geom_point(aes(y = mean, fill = Group), shape = 23, size = 3, alpha = 1) +
  #geom_errorbar(aes(ymin = mean-se, ymax=mean+se), width=.1, position=position_dodge(0.05)) +
- stat_summary(aes(y = beta_lasso), fun.data = mean_sdl, fun.args = list(mult = 1), geom = "errorbar", width=0.25) +
-   stat_summary(aes(y = beta_lasso, fill = Group), fun.y = mean, geom ="point", shape=23, size=3, alpha = 1) +
+ #stat_summary(aes(y = beta_lasso), fun.data = mean_sdl, fun.args = list(mult = 1), geom = "errorbar", width=0.25) +
+  # stat_summary(aes(y = beta_lasso, fill = Group), fun.y = mean, geom ="point", shape=23, size=3, alpha = 1) +
   geom_col(aes(y = number_nonzero/4000, fill = Group), width = 0.8, position ="identity", alpha = 0.002) +
   scale_y_continuous(sec.axis = sec_axis(~.*4000, name = "# of Non-zero Beta Coefficients")) +
   theme_classic() +
@@ -255,8 +255,10 @@ summary_data_lasso %>%
         text = element_text(size = 12.5), 
         aspect.ratio = 1/1,
         axis.line.x = element_blank(),
-        axis.ticks.x = element_blank()) +
-  geom_hline(yintercept = 0) 
+        axis.ticks.x = element_blank(),
+        axis.line.y = element_line(color = "gray")) +
+  geom_hline(yintercept = 0, color = "gray") +
+  geom_boxplot(aes(y = beta_lasso), outlier.shape = NA, alpha = 0) 
  
   
 ```
