--- a/grlasso_grpreg/grlasso_three_groups.Rmd
+++ b/grlasso_grpreg/grlasso_three_groups.Rmd
@@ -192,6 +192,8 @@ summary_data_grlasso$chem <- factor(summary_data_grlasso$chem,levels = c("1,2,3,
                                 "PCB 194",
                                 "PCB 126",
                                 "PCB 169"))
+
+write.csv(summary_data_grlasso, "summary_data_grlasso.csv")
 ```
 
 ### beta plot for group lasso
@@ -223,29 +225,28 @@ labs(y = "Beta Coefficients",
 summary_data_grlasso %>%
   group_by(chem) %>%
   ggplot(aes(x = chem)) +
- geom_jitter(aes(y = beta_grlasso, color = Group), shape=16, size = 1, alpha = 1,  position=position_jitter(height = 0.0005, width = .2))+
+ geom_hline(yintercept = 0, color = "black") +
+  geom_jitter(aes(y = beta_grlasso, color = Group), shape=16, size = 1, alpha = 1,  position=position_jitter(height = 0.0005, width = .2))  +
+   geom_boxplot(aes(y = beta_grlasso), outlier.shape = NA, alpha = 0) +
  # stat_summary(aes(y = beta_grlasso), fun.data = mean_sdl, fun.args = list(mult = 1), geom = "errorbar", width=0.25) +
   # stat_summary(aes(y = beta_grlasso, fill = Group), fun.y = mean, geom ="point", shape=23, size=3, alpha = 1) +
   #geom_point(aes(y = mean, fill = Group), shape = 23, size = 3, alpha = 1) +
  #geom_errorbar(aes(ymin = mean-se, ymax=mean+se), width=.1, position=position_dodge(0.05)) +
- 
-  #geom_boxplot(aes(y = beta_grlasso, color = Group), outlier.shape = NA, alpha = 0) +
   geom_col(aes(y = number_nonzero/4000, fill = Group), width = 0.8, position ="identity", alpha = 0.002) +
   scale_y_continuous(sec.axis = sec_axis(~.*4000, name = "# of Non-zero Beta Coefficients")) +
   theme_classic() +
   labs(y = "Beta Coefficients",
        x = element_blank()) +
-  theme(axis.text.x = element_text(angle = 60, hjust = 1, size = 9.5),
-                      legend.position = "bottom",
-                      legend.text = element_text(size = 12),
-        axis.text.y = element_text(size = 9.5),
-        text = element_text(size = 12.5), 
-        aspect.ratio = 1/1,
-        axis.line.x = element_blank(),
-        axis.ticks.x = element_blank(),
-        axis.line.y = element_line(color = "gray")) +
-  geom_hline(yintercept = 0, color = "gray") +
-   geom_boxplot(aes(y = beta_grlasso), outlier.shape = NA, alpha = 0) 
+      theme(axis.text.x = element_text(angle = 60, hjust = 1, size = 9.5),
+            legend.position = "bottom",
+            legend.text = element_text(size = 12),
+            axis.text.y = element_text(size = 9.5),
+            text = element_text(size = 12.5), 
+            aspect.ratio = 1/1,
+            axis.line.x = element_blank(),
+            axis.ticks.x = element_blank(),
+            axis.line.y = element_line(color = "black"))
+ 
  
 ```
 
