--- a/grlasso_grpreg/grlasso_three_groups.Rmd
+++ b/grlasso_grpreg/grlasso_three_groups.Rmd
@@ -222,11 +222,15 @@ labs(y = "Beta Coefficients",
 
 #final summary plot for group lasso
 ```{r}
+
+summary_data_grlasso <- read.csv("summary_data_grlasso.csv") %>%
+  dplyr::select(-X)
+
 summary_data_grlasso %>%
   group_by(chem) %>%
   ggplot(aes(x = chem)) +
  geom_hline(yintercept = 0, color = "black") +
-  geom_jitter(aes(y = beta_grlasso, color = Group), shape=16, size = 1, alpha = 1,  position=position_jitter(height = 0.0005, width = .2))  +
+  geom_jitter(aes(y = beta_grlasso, color = Group), shape=16, size = 1, alpha = 1,  position=position_jitter(width = .2))  +
    geom_boxplot(aes(y = beta_grlasso), outlier.shape = NA, alpha = 0) +
  # stat_summary(aes(y = beta_grlasso), fun.data = mean_sdl, fun.args = list(mult = 1), geom = "errorbar", width=0.25) +
   # stat_summary(aes(y = beta_grlasso, fill = Group), fun.y = mean, geom ="point", shape=23, size=3, alpha = 1) +
@@ -237,7 +241,7 @@ summary_data_grlasso %>%
   theme_classic() +
   labs(y = "Beta Coefficients",
        x = element_blank()) +
-      theme(axis.text.x = element_text(angle = 60, hjust = 1, size = 9.5),
+      theme(axis.text.x = element_text(angle = 90, hjust = 1, size = 9.5),
             legend.position = "bottom",
             legend.text = element_text(size = 12),
             axis.text.y = element_text(size = 9.5),
