--- a/WQS/WQS.Rmd
+++ b/WQS/WQS.Rmd
@@ -302,6 +302,16 @@ summary_data_gwqs %>%
  
 ```
 
+#largest weight values 
+```{r}
+max_weight <- summary_data_gwqs %>%
+  group_by(seed) %>%
+  filter(mean_weight == max(mean_weight)) %>%
+  group_by(chem) %>%
+  summarise(n())
+
+```
+
 
 #Specifying the splits for the training and validation sets
 ```{fixed splits, cache = TRUE}
