fig lasso edits

--- a/lasso_glmnet/lasso.Rmd
+++ b/lasso_glmnet/lasso.Rmd
@@ -238,8 +238,28 @@ write.csv(summary_data_lasso, "summary_data_lasso.csv")
 
 #final summary plot for lasso
 ```{r}
-summary_data_lasso <- read.csv("summary_data_lasso.csv") %>%
+summary_data_lasso <- read.csv("../lasso_glment/summary_data_lasso.csv") %>%
   dplyr::select(-X)
+
+summary_data_lasso$chem <- factor(summary_data_lasso$chem,levels = c("1,2,3,6,7,8-hxcdd",
+                                "1,2,3,4,6,7,8-hpcdd",
+                               "1,2,3,4,6,7,8,9-ocdd",
+                               "2,3,4,7,8-pncdf",
+                               "1,2,3,4,7,8-hxcdf",
+                               "1,2,3,6,7,8-hxcdf",
+                               "1,2,3,4,6,7,8-hxcdf",
+                               "PCB 118",
+                               "PCB 74",
+                                "PCB 99",
+                                "PCB 138",
+                                "PCB 153",
+                                "PCB 170",
+                                "PCB 180",
+                                "PCB 187",
+                                "PCB 194",
+                                "PCB 126",
+                                "PCB 169"))
+
 
 summary_data_lasso %>%
   group_by(chem) %>%
