--- a/lasso_glmnet/lasso.Rmd
+++ b/lasso_glmnet/lasso.Rmd
@@ -255,15 +255,16 @@ summary_data_lasso %>%
   theme_classic() +
   labs(y = "Beta Coefficients",
        x = element_blank()) +
-  theme(axis.text.x = element_text(angle = 90, hjust = 1, size = 9.5),
+  theme(axis.text.x = element_text(angle = 90, hjust = 1, size = 20),
                       legend.position = "bottom",
-                      legend.text = element_text(size = 12),
-        axis.text.y = element_text(size = 9.5),
-        text = element_text(size = 12.5), 
+                      legend.text = element_text(size = 20),
+        axis.text.y = element_text(size = 20),
+        text = element_text(size = 24), 
         aspect.ratio = 1/1,
         axis.line.x = element_blank(),
         axis.ticks.x = element_blank(),
-        axis.line.y = element_line(color = "black")) +
+        axis.line.y = element_line(color = "black"),
+        legend.title = element_blank()) +
   geom_boxplot(aes(y = beta_lasso), outlier.shape = NA, alpha = 0) 
  
   
