--- a/WQS/WQS.Rmd
+++ b/WQS/WQS.Rmd
@@ -287,15 +287,16 @@ summary_data_gwqs %>%
   theme_classic() +
   labs(y = "Weight",
        x = element_blank()) +
-  theme(axis.text.x = element_text(angle = 90, hjust = 1, size = 12),
+  theme(axis.text.x = element_text(angle = 90, hjust = 1, size = 20),
                       legend.position = "bottom",
-                      legend.text = element_text(size = 15),
-        axis.text.y = element_text(size = 15),
-        text = element_text(size = 15), 
+                      legend.text = element_text(size = 20),
+        axis.text.y = element_text(size = 20),
+        text = element_text(size = 24), 
         aspect.ratio = 1/1,
         axis.line.x = element_blank(),
        # axis.line.y = element_line(color = "gray"),
-        axis.ticks.x = element_blank()) +
+        axis.ticks.x = element_blank(),
+       legend.title = element_blank()) +
   geom_boxplot(aes(y = mean_weight), outlier.shape = NA, alpha = 0) 
   
  
