--- a/lasso_glmnet/lasso.Rmd
+++ b/lasso_glmnet/lasso.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "beta coefficients plot"
+title: Random Seed Lasso Cross-Validation and Coefficients
 author: "Yanelli Nunez"
 date: "7/12/2019"
 output: 
@@ -11,9 +11,8 @@ editor_options:
 ---
 
 
--If I give you seed 3 I get a full range and if I give you seed 1 I get a single point. 
--Do group lasso with single element groupings and see if we can replicate lasso
--what is the vector matrix structure that we suppose to use for grp lasso 
+## Load packages
+
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
@@ -24,17 +23,16 @@ library(glmnet)
 library(grpreg)
 ```
 
-Note: R is version: 3.6.1
-glmnet and grpreg package are the new versions
+
 ```{r}
 sessionInfo()
 ```
 
-### Data Import and Cleaning 
+## Data import and cleaning 
 
 First, load the dataset; clean up names as needed; and convert factors to, well, factors. Next we remove missing values and reorder predictors (environmental variables first, confounders second). In keeping with standard practice, we'll ln-transform the environmental exposures and the outcome. This is the dataset we'll use to illustrate variable selection methods.
 
-```{r}
+```{r 1}
 study_pop = read_csv("./Data/studypop.csv") %>% 
   clean_names(case = c("old_janitor")) %>% 
   mutate(bmi_cat3 = as.factor(bmi_cat3),
@@ -55,13 +53,13 @@ x = model.matrix(log_telomean ~ ., data)[,-1]
 y = data$log_telomean
 ```
 
-# Lasso 
+## Lasso 
 ### Lasso w/ CV
 
 Some built-in functions will conduct a cross-validation analysis and identify the "best" tuning parameter.
 Optional arguments to `glmnet` can be useful -- in particular, `weights` can be used in the context of the adaptive lasso and `penalty.factor` can separate penalized variables from confounders. 
 
-```{r}
+```{r 2}
 set.seed(2)
 
 is_penalized = c(rep(1, ncol(x[,1:18])), rep(0, ncol(x[,19:36])))
@@ -77,8 +75,16 @@ best_lambda
 ```
 
 
-### Looping seeds for lasso for coefficients plot
-```{r}
+## Lasso over 100 seeds
+
+Note: this code chunk takes very long to run. We saved the output data as a .csv called "summary_data_lasso.csv" that you can use in code chunk 5 and 6.
+
+### Function
+
+```{r 3}
+
+#  Function to run lasso over 100 seeds
+
 fit_cv_lasso = function(seed) {
   set.seed(seed)
   cv.lasso = cv.glmnet(x, y, 
@@ -97,12 +103,12 @@ fit_cv_lasso = function(seed) {
 lasso.mod
 }
 
-
 extract_coefs = function(fit) {
  as.tibble(as.matrix(fit$beta), rownames = "variable") %>%
     rename(beta = s0) 
 }
 
+# Apply function with seeds 1-100 (this takes very long time to finish running. I save a .csv file with the out put data so you don't have to run this)
 
 repeat_cv_lasso = 
   tibble(seed = 1:100) %>% 
@@ -116,56 +122,11 @@ repeat_cv_lasso =
 
 ```
 
-### Looping seeds for lasso for lambda plot
-```{r}
-
-fit_cv_lasso_2 = function(seed) {
-  set.seed(seed)
-  cv.lasso = cv.glmnet(x, y, 
-                     penalty.factor = c(rep(1, ncol(x[,1:18])), rep(0, ncol(x[,19:36]))),
-                     type.measure = "mse", alpha = 1)
-
-  
-  loop_cvm    <- cv.lasso$cvm  # mean cross-validation error
-  loop_cvsd   <- cv.lasso$cvsd #std error of CV error
-  loop_lam    <- cv.lasso$lambda 
-  best_lambda <- cv.lasso$lambda.min # to plot min, median, max
-  
-  dat <- cbind(lam = loop_lam, cvm = loop_cvm, cvsd = loop_cvsd, best_lambda = best_lambda) %>% 
-    as_tibble() %>% 
-    mutate(upper = cvm + 1.96*cvsd,
-         lower = cvm - 1.96*cvsd) %>% 
-    mutate(seed1 = seed)
-
-}
-
-repeat_cv_lasso_2 = 
-  tibble(seed = 1:100) %>%
-  mutate(
-    fits = map(seed, ~fit_cv_lasso_2(seed = .x))) %>% 
-  unnest() %>% 
-  mutate(seed = as.factor(seed))
-
-  
-```
 
 
-# Lasso visualization
+### 100 seeds data output (tidying)
 
-#### betas
-```{r}
-
-repeat_cv_lasso  %>%
-  ggplot() + 
-  geom_point(aes(x = seed, y = beta_lasso), color = 'red', size = 0.5, alpha = 0.5) + 
-  facet_wrap(~variable) + 
-  geom_hline(yintercept = 0) +
-  ggtitle("R3.6.1 glmnet 2.0-18 betas")
-
-```
-
-#compiling data for final summary beta plot
-```{r}
+```{r 4}
 data_lasso <- repeat_cv_lasso %>%
   filter(!variable %in% c("bmi_cat32", "bmi_cat33", "edu_cat2", "edu_cat3", "edu_cat4", "race_cat2", "race_cat3", "race_cat4", "male1", "ln_lbxcot", "age_cent", "age_sq", "lbxwbcsi", "lbxlypct", "lbxlypct", "lbxmopct", "lbxmopct", "lbxnepct",
 "lbxnepct", "lbxeopct", "lbxeopct", "lbxbapct", "lbxbapct")) %>%
@@ -236,10 +197,28 @@ summary_data_lasso$chem <- factor(summary_data_lasso$chem,levels = c("1,2,3,6,7,
 
 ```
 
-#final summary plot for lasso
-```{r}
+
+## Lasso visualization
+
+### Betas plot
+
+```{r 5}
+
 summary_data_lasso <- read_csv("./lasso_glmnet/summary_data_lasso.csv") %>%
   dplyr::select(-X1)
+
+summary_data_lasso  %>%
+  ggplot() + 
+  geom_point(aes(x = seed, y = beta_lasso), color = 'red', size = 0.5, alpha = 0.5) + 
+  facet_wrap(~chem) + 
+  geom_hline(yintercept = 0) +
+  ggtitle("Lasso betas over 100 seeds")
+
+```
+
+### Summary plot for lasso
+
+```{r 6}
 
 #pdf("./Figures/lasso_summary.pdf")
 summary_data_lasso %>%
@@ -247,24 +226,19 @@ summary_data_lasso %>%
   ggplot(aes(x = chem)) +
    geom_hline(yintercept = 0, color = "black") +
   geom_jitter(aes(y = beta_lasso, color = Group), shape=16, size = 1, position=position_jitter(width = .2)) +
-  #geom_point(aes(y = mean, fill = Group), shape = 23, size = 3, alpha = 1) +
- #geom_errorbar(aes(ymin = mean-se, ymax=mean+se), width=.1, position=position_dodge(0.05)) +
- #stat_summary(aes(y = beta_lasso), fun.data = mean_sdl, fun.args = list(mult = 1), geom = "errorbar", width=0.25) +
-  # stat_summary(aes(y = beta_lasso, fill = Group), fun.y = mean, geom ="point", shape=23, size=3, alpha = 1) +
-<<<<<<< HEAD
   geom_col(aes(y = number_nonzero/4000, fill = Group), width = 0.8, position ="identity", alpha = 0.006) +
-=======
+
   geom_col(aes(y = number_nonzero/4000, fill = Group), width = 0.8, position ="identity", alpha = 0.005) +
->>>>>>> 0fd4f5e4eddf65665618107701058fd7b255d794
+
   scale_y_continuous(sec.axis = sec_axis(~.*4000, name = "# of Non-zero Beta Coefficients")) +
   theme_classic() +
   labs(y = "Beta Coefficients",
        x = element_blank()) +
-  theme(axis.text.x = element_text(angle = 90, hjust = 1, size = 20),
+  theme(axis.text.x = element_text(angle = 90, hjust = 1, size = 14),
                       legend.position = "bottom",
-                      legend.text = element_text(size = 20),
-        axis.text.y = element_text(size = 20),
-        text = element_text(size = 24), 
+                      legend.text = element_text(size = 12),
+        axis.text.y = element_text(size = 12),
+        text = element_text(size = 12), 
         aspect.ratio = 1/1,
         axis.line.x = element_blank(),
         axis.ticks.x = element_blank(),
@@ -275,9 +249,45 @@ summary_data_lasso %>%
   
 ```
 
+## Lasso over 100 seeds to obtain lambdas
+
+```{r 7}
+
+fit_cv_lasso_2 = function(seed) {
+  set.seed(seed)
+  cv.lasso = cv.glmnet(x, y, 
+                     penalty.factor = c(rep(1, ncol(x[,1:18])), rep(0, ncol(x[,19:36]))),
+                     type.measure = "mse", alpha = 1)
+
+  
+  loop_cvm    <- cv.lasso$cvm  # mean cross-validation error
+  loop_cvsd   <- cv.lasso$cvsd #std error of CV error
+  loop_lam    <- cv.lasso$lambda 
+  best_lambda <- cv.lasso$lambda.min # to plot min, median, max
+  
+  dat <- cbind(lam = loop_lam, cvm = loop_cvm, cvsd = loop_cvsd, best_lambda = best_lambda) %>% 
+    as_tibble() %>% 
+    mutate(upper = cvm + 1.96*cvsd,
+         lower = cvm - 1.96*cvsd) %>% 
+    mutate(seed1 = seed)
+
+}
+
+repeat_cv_lasso_2 = 
+  tibble(seed = 1:100) %>%
+  mutate(
+    fits = map(seed, ~fit_cv_lasso_2(seed = .x))) %>% 
+  unnest() %>% 
+  mutate(seed = as.factor(seed))
+
+  
+```
+
+
 
 ### Lambda with Error Bars
-```{r}
+
+```{r 8}
 repeat_cv_lasso_2 %>% 
   ggplot(aes(x = lam, y = cvm, color = seed)) + 
   geom_point() + 
@@ -289,6 +299,7 @@ repeat_cv_lasso_2 %>%
 
 
 ### Lambda without Error Bars
+
 ```{r}
 repeat_cv_lasso_2 %>% 
   ggplot(aes(x = lam, y = cvm, color = seed)) + 
@@ -300,7 +311,8 @@ repeat_cv_lasso_2 %>%
 ```
 
 #### Lambda to Plot
-```{r}
+
+```{r 9}
 repeat_cv_lasso_2 %>% dplyr::select(seed, best_lambda) %>% distinct() %>% summary()
 repeat_cv_lasso_2 %>% dplyr::select(seed, best_lambda) %>% distinct() %>% pull(best_lambda) %>% quantile()
 
@@ -325,7 +337,8 @@ repeat_cv_lasso_2 %>%
 
 
 ### Selected lambda
-```{r}
+
+```{r 10}
 min_cv <- repeat_cv_lasso_2 %>% 
   group_by(seed) %>% 
   filter(cvm == min(cvm))
